--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.0",
+    "bootstrap": "^5.3.0",
     "core-js": "^3.8.3",
+    "font-awesome": "^4.7.0",
     "vue": "^3.2.13"
   },
   "devDependencies": {
